...
    
    override func viewDidLoad() {
        super.viewDidLoad()

        // Do any additional setup after loading the view.
        listView.dataSource = self
        listView.accessibilityIdentifier = "BreedGalleryViewIdentifier"

        //Show breed name on navigation title
        self.title = self.breed.breedname
        
        //Show sort by subbreed dropdown menu
        self.setUpSubbreedDropDownMenu()
...
